Fixed bottom margin for browse list and vertical alignment for count labels in pageview

--- a/assets/scss/browse.scss
+++ b/assets/scss/browse.scss
@@ -49,7 +49,7 @@ li.flag p {
 	li {
 		position: relative;
 		list-style-type: none;
-		margin: 5px 20px 30px 0;
+		margin: 5px 20px 40px 0;
 		width: 80px;
 		height: 120px;
 		vertical-align: top;
